# website-analysis

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt
.github/: bug_report_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: poetry_CI.yml  python-app.yml
src/: main.py  utils.py
src/website/: html.py  site.py
src/website/html/: html.py
src/writers/: json_writer.py  text_writer.py  writer.py
tests/: test_mainFuncs.py  test_pytest.py  test_utilities.py  test_utils.py
tests/html/: test_html.py  test_website.py
tests/website/: test_website.py
tests/website/html/: test_html.py
tests/writer/: test_excelWriter.py  test_jsonWriter.py  test_parentClass.py  test_textWriter.py  test_writeManager.py
website_analysis/: main.py  utilities.py
website_analysis/html/: html.py  website.py
website_analysis/src/: utilities.py
website_analysis/src/website/: site.py
website_analysis/src/writers/: json_writer.py  text_writer.py  writer.py
website_analysis/tests/: test_utilities.py
website_analysis/tests/website/: test_website.py
website_analysis/tests/writer/: test_excelWriter.py  test_jsonWriter.py  test_textWriter.py  test_writeManager.py
website_analysis/writers/: excel_writer.py  json_writer.py  text_writer.py  writer.py
