[tool.poetry]
name = "website-analysis"
version = "0.1.0"
description = ""
authors = ["TonyGrif <TonyGriffin2000@gmail.com>"]
readme = "README.md"
packages = [{include = "website_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
